# linear-regression-ridge-lasso-elasticnet

./: .gitignore  README.md  predict.py  pyproject.toml  train.bat  train.py  utils.py  web.bat  web.py
.devcontainer/: devcontainer.json
data/: elasticnet_alpha=0.01.joblib  elasticnet_alpha=0.1.joblib  elasticnet_alpha=1.0.joblib  elasticnet_alpha=10.0.joblib  elasticnet_alpha=100.0.joblib  lasso_alpha=0.01.joblib  lasso_alpha=0.1.joblib  lasso_alpha=1.0.joblib  lasso_alpha=10.0.joblib  lasso_alpha=100.0.joblib  linear_regression.joblib  ridge_alpha=0.01.joblib  ridge_alpha=0.1.joblib  ridge_alpha=1.0.joblib  ridge_alpha=10.0.joblib  ridge_alpha=100.0.joblib
