[project]
name = "linear-regression-project"
version = "0.1.0"
description = "Linear Regression and variants analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.30.0",
    "joblib>=1.3.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
